--- a/static/styles.css
+++ b/static/styles.css
@@ -3,7 +3,7 @@ body {
             line-height: 1.6;
             color: #e2e8f0;
 
-            background: linear-gradient(135deg, #000000 , #130F40 100%);
+            background: linear-gradient(135deg, #000000 , #1c0405 75%);
             margin: 0 auto;
             border-radius: 8px;
             display: flex;
@@ -14,7 +14,7 @@ body {
         }
         .container {
             margin: 0 auto;
-            background: #171923;
+            background: #1c0405;
             padding: 30px;
             border-radius: 8px;
             box-shadow: 0 4px 20px rgba(0,0,0,0.3);
@@ -43,7 +43,7 @@ body {
         }
         .sidebar {
             width: 240px;
-            background: linear-gradient( #000000 , #030114 100%);
+            background: linear-gradient( #000000 , #1c0405 150%);
             color: white;
             padding: 20px;
             display: flex;
@@ -120,7 +120,7 @@ body {
             flex-grow: 1;
             padding: 20px;
             overflow-y: auto;
-            background: linear-gradient(135deg, #000000 , #130F40 100%);
+            background: linear-gradient(135deg, #000000 , #1c0405 100%);
             display: flex;
             flex-direction: column;
         }
