--- a/templates/dash.html
+++ b/templates/dash.html
@@ -69,7 +69,7 @@
                             <div class="message ai-message">
                                 <div class="message-avatar"><img src="static/img_2.png" class="ai-avatar"></div>
                                 <div class="message-content">
-                                    Hello! How can I help you today?
+                                    Hello, I am Veu! How can I help you today?
                                     <div class="message-timestamp">10:30 AM</div>
                                 </div>
                             </div>
